gcc/testsuite/rust/rustc/ui/issues/issue-12863.rs
mod foo { pub fn bar() {} }

fn main() {
    match () {
        foo::bar => {}
// { dg-error ".E0532." "" { target *-*-* } .-1 }
    }
}

